Fixes color contrast issues

--- a/assets/scss/_shame.scss
+++ b/assets/scss/_shame.scss
@@ -479,3 +479,21 @@ a.button--reverse-secondary {
     line-height: 1;
 }
 
+/**
+ * Highlight.js overrides
+ */
+.hljs {
+    background: #fafafa;
+}
+
+.hljs-meta {
+    color: $color-black--700;
+}
+
+.hljs-comment {
+    color: $color-black--700;
+}
+
+.hljs-tag .hljs-attr {
+    color: #2424b3;
+}
